# pylibdatachannel

./: .gitmodules  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
requirements/: base.txt  test.in  test.txt
scripts/: build-libdatachannel-cmake.sh  prepare-linux.sh  prepare-macos.sh
src/cpp/: main.cpp
src/py/: __init__.pyi
src/py/pylibdatachannel/: __init__.py
tests/: test_libdatachannel_wrapper.py
