[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pylibdatachannel"
version = "0.0.1"
requires-python = ">=3.11"

[tool.cibuildwheel]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:latest"

[tool.cibuildwheel.linux]
before-all = "scripts/prepare-linux.sh"
archs = [
    "x86_64",
    "aarch64",
]

