[build-system]
requires = [
    "setuptools>=75.0.0",
    "setuptools_scm>=8",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pylibdatachannel"
requires-python = ">=3.11"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Wrapper around libdatachannel"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ondřej Novák", email = "git@npost.cz"},
]
keywords = [
    "libdatachannel",
    "webrtc",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/handycz/pylibdatachannel"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/base.txt"] }
optional-dependencies.test = { file = ["requirements/test.txt"] }

[tool.setuptools.packages.find]
where = ["src/py"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.cibuildwheel]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:latest"
test-command = "pytest {package}"
test-extras = "test"

[tool.cibuildwheel.linux]
before-all = "scripts/prepare-linux.sh"
archs = [
    "x86_64",
    "aarch64",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 120
norecursedirs = [
    "build",
    "foreign",
]

required_plugins = [
    "pytest-asyncio",
    "pytest-mypy",
    "pytest-ruff",
    "pytest-timeout",
]

addopts = "--mypy --ruff --ruff-format"

[tool.ruff]
line-length = 350

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # async
    "ASYNC",
]
